[gd_scene load_steps=41 format=3 uid="uid://iqgaesrkljbm"]

[ext_resource type="Script" uid="uid://clgdh6a4edash" path="res://Skeleton.gd" id="1_3yqyl"]
[ext_resource type="Texture2D" uid="uid://b8opmckbrgppu" path="res://Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Skeleton/Attack.png" id="1_epg4t"]
[ext_resource type="Texture2D" uid="uid://o3ls6nku5a17" path="res://Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Skeleton/Death.png" id="2_3yqyl"]
[ext_resource type="Texture2D" uid="uid://dduslwx4d4j3r" path="res://Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Skeleton/Take Hit.png" id="3_wujgv"]
[ext_resource type="Texture2D" uid="uid://ccb7yltidvy4t" path="res://Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Skeleton/Idle.png" id="4_hb8ge"]
[ext_resource type="Texture2D" uid="uid://d3gjdm5f5amje" path="res://Monsters_Creatures_Fantasy/Monsters_Creatures_Fantasy/Skeleton/Walk.png" id="5_e1ltt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dxifv"]
atlas = ExtResource("1_epg4t")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwjut"]
atlas = ExtResource("1_epg4t")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0g06"]
atlas = ExtResource("1_epg4t")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_5hcft"]
atlas = ExtResource("1_epg4t")
region = Rect2(750, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnovl"]
atlas = ExtResource("1_epg4t")
region = Rect2(900, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmwgi"]
atlas = ExtResource("2_3yqyl")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2u8i"]
atlas = ExtResource("2_3yqyl")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_otto8"]
atlas = ExtResource("2_3yqyl")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_8q82m"]
atlas = ExtResource("2_3yqyl")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_epc7x"]
atlas = ExtResource("3_wujgv")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7rgc"]
atlas = ExtResource("3_wujgv")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdav3"]
atlas = ExtResource("3_wujgv")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpbtr"]
atlas = ExtResource("3_wujgv")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qgdfx"]
atlas = ExtResource("4_hb8ge")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_qku5p"]
atlas = ExtResource("4_hb8ge")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1fjw"]
atlas = ExtResource("4_hb8ge")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5wqg"]
atlas = ExtResource("4_hb8ge")
region = Rect2(450, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgro5"]
atlas = ExtResource("5_e1ltt")
region = Rect2(0, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_18rq2"]
atlas = ExtResource("5_e1ltt")
region = Rect2(150, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccdwq"]
atlas = ExtResource("5_e1ltt")
region = Rect2(300, 0, 150, 150)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jgdh"]
atlas = ExtResource("5_e1ltt")
region = Rect2(450, 0, 150, 150)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wg26"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwjut")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnovl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5hcft")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0g06")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxifv")
}],
"loop": true,
"name": &"Attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmwgi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2u8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otto8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8q82m")
}],
"loop": true,
"name": &"Death",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7rgc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpbtr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdav3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_epc7x")
}],
"loop": true,
"name": &"Hit",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qgdfx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qku5p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1fjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5wqg")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgro5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18rq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccdwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jgdh")
}],
"loop": true,
"name": &"Walk",
"speed": 4.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qskgw"]
radius = 6.0
height = 34.0

[sub_resource type="Animation" id="Animation_vsooi"]
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../SkeletonHitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.433333, 0.54),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_rsp4x"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Death"]
}

[sub_resource type="Animation" id="Animation_0rk3j"]
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Hit"]
}

[sub_resource type="Animation" id="Animation_jgngj"]
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_rtp38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../SkeletonHitbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_hu0m1"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="Animation" id="Animation_dfc0f"]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:sprite_frames")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rtp38"]
_data = {
&"Attack": SubResource("Animation_vsooi"),
&"Death": SubResource("Animation_rsp4x"),
&"Hit": SubResource("Animation_0rk3j"),
&"Idle": SubResource("Animation_jgngj"),
&"RESET": SubResource("Animation_rtp38"),
&"Walk": SubResource("Animation_hu0m1"),
&"attack": SubResource("Animation_dfc0f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x2ulk"]
size = Vector2(453, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_3yqyl"]
radius = 32.205

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfc0f"]
size = Vector2(89.2857, 20)

[node name="Enemy" type="CharacterBody2D" groups=["enemies"]]
script = ExtResource("1_3yqyl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(3, 3)
scale = Vector2(0.466667, 0.5)
sprite_frames = SubResource("SpriteFrames_6wg26")
animation = &"Attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 4)
shape = SubResource("CapsuleShape2D_qskgw")

[node name="DirectionTimer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite2D")
libraries = {
&"": SubResource("AnimationLibrary_rtp38")
}

[node name="AttackArea" type="Area2D" parent="."]
visible = false
position = Vector2(-30, 49)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(31, -42)
shape = SubResource("RectangleShape2D_x2ulk")

[node name="SkeletonHitbox" type="Area2D" parent="." groups=["enemies"]]
position = Vector2(3, 3)
scale = Vector2(0.466667, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="SkeletonHitbox"]
position = Vector2(36.4285, 0)
shape = SubResource("CircleShape2D_3yqyl")
disabled = true

[node name="PlayerDetector" type="Area2D" parent="." groups=["Enemy"]]
position = Vector2(3, 3)
scale = Vector2(0.466667, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2(36.4285, 0)
shape = SubResource("RectangleShape2D_dfc0f")

[node name="EdgeDetector" type="RayCast2D" parent="."]
position = Vector2(14, -9)
target_position = Vector2(0, 29)

[connection signal="timeout" from="DirectionTimer" to="." method="_on_direction_timer_timeout"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="SkeletonHitbox" to="." method="_on_skeleton_hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_player_detector_body_exited"]
